<resources>
    <string name="app_name">Monster_Arena</string>
    <string name="welcome_to_monster_arena">Welcome to Monster Arena</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="PREFERENCE_FILE_KEY">preferenceFileKeyMonsterArena</string>
    <string name="PREFERENCE_USERID_KEY">preferenceUserIdKeyMonsterArena</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="select_arena">Select Arena</string>
    <string name="view_monsters">View Monsters</string>
    <string name="manage_users">Manage Users</string>
    <string name="welcome">Welcome,</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="non_admin">Non-admin</string>
    <string name="user_image">User Image</string>
    <string name="battle_results_title">Battle Results</string>
    <string name="battle_details_button">Battle Details</string>
    <string name="battle_history_button_in_batResults">Battle History</string>
    <string name="exit_in_batResults">Exit</string>
    <string name="battle_details_title">Battle Details</string>
    <string name="return_battle_details">Return</string>
    <string name="return_battle_history">Return</string>
    <string name="battle_history_title">Battle History</string>
    <string name="select_your_arena">Select Your Arena</string>
    <string name="arena_1">Arena 1</string>
    <string name="arena_2">Arena 2</string>
    <string name="arena_3">Arena 3</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="trainButtonText">Train</string>
    <string name="monster_roster_title">Monster Roster</string>
    <string name="captureButtonText">Capture</string>
    <string name="exitButtonText">Exit</string>
    <string name="monster_info">Monster Info</string>
    <string name="monster_name">Monster Name</string>
    <string name="no_monsters_for_user">\"No Monsters to show.\"</string>
    <string name="arena_history_results">Arena History Results</string>
    <string name="click_to_return_arena_history">Click To Return Arena History</string>
    <string name="choose_your_arena">Choose Your Arena!</string>
    <string name="fire_arena">Fire Arena</string>
    <string name="arena_types">Arena Types</string>
</resources>